modules/security-group/main.tf
variable "vpc_id" {}
resource "aws_security_group" "web_sg" {
  vpc_id = var.vpc_id

ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
ingress {
    from_port = 23
    to_port = 23
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
egress{
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
}
